--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="block">
       <header>
-        <nav id="nav-menu-header">
+        <nav id="menu-header">
           <div class="wrapper-header">
             <a href="#">
               <svg
