--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <nav id="menu-header">
           <div class="wrapper-header">
-            <a href="#">
+            <a aria-label="link to main page" href="#" id="logo-link">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="121"
@@ -165,7 +165,7 @@
     <footer>
       <nav id="nav-footer" class="nav-footer">
         <div class="wrapper-logo">
-          <a href="#">
+          <a aria-label="link to main page" href="#">
             <img
               class="logo-footer"
               src="images/logo.svg"
@@ -207,7 +207,11 @@
         </ul>
 
         <div class="social-link">
-          <a href="#" class="link-social">
+          <a
+            aria-label="link to our facebook page"
+            href="#"
+            class="link-social"
+          >
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
               <path
                 fill="#FFF"
@@ -216,7 +220,7 @@
             </svg>
           </a>
 
-          <a href="#" class="link-social">
+          <a aria-label="link to our twitter page" href="#" class="link-social">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20">
               <path
                 fill="#FFF"
@@ -225,7 +229,11 @@
             </svg>
           </a>
 
-          <a href="#" class="link-social">
+          <a
+            aria-label="link to our pinterest page"
+            href="#"
+            class="link-social"
+          >
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
               <path
                 fill="#FFF"
@@ -234,7 +242,11 @@
             </svg>
           </a>
 
-          <a href="#" class="link-social">
+          <a
+            aria-label="link to our instagram page"
+            href="#"
+            class="link-social"
+          >
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
               <path
                 fill="#FFF"
